--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/liquidchurch/liquid-church-theme#readme",
   "devDependencies": {
-    "backstopjs": "^4.4.2"
-  }
+    "backstopjs": "^4.4.2",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0"
+  },
+  "dependencies": {}
 }
