--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/liquidchurch/liquid-church-theme#readme",
   "devDependencies": {
-    "backstopjs": "^4.4.2",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0"
+    "autoprefixer": "^9.7.6",
+    "eslint": "^6.8.0",
+    "postcss": "^7.0.28",
+    "prettier": "^2.0.5",
+    "stylelint": "^13.3.3",
+    "stylelint-config-prettier": "^8.0.1",
+    "yuicompressor": "^2.4.8"
   },
   "dependencies": {}
 }
