--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^6.8.0",
     "postcss": "^7.0.28",
     "prettier": "^2.0.5",
+    "sass": "^1.26.5",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.1",
     "yuicompressor": "^2.4.8"
