--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "homepage": "https://bitbucket.org/liquidchurch/liquid-church-theme#readme",
   "devDependencies": {
     "autoprefixer": "^9.7.6",
+    "backstopjs": "^5.0.1",
     "eslint": "^6.8.0",
+    "gulp-cli": "^2.2.0",
     "postcss": "^7.0.28",
+    "postcss-cli": "^7.1.1",
     "prettier": "^2.0.5",
     "sass": "^1.26.5",
     "stylelint": "^13.3.3",
